Improve build process and documentation for NIH templates
- Add --root flag to typst compile commands to fix import resolution
- Create compile_templates.sh script for easier template compilation
- Add outputs directory for compiled PDFs
- Expand README with comprehensive usage instructions and repo structure
- Add bibliography file for R03 template

--- a/.github/workflows/compile-typst.yml
+++ b/.github/workflows/compile-typst.yml
@@ -23,10 +23,10 @@ jobs:
           version: 'latest'
 
       - name: Compile R01 template
-        run: typst compile templates/R01/R01.typ outputs/R01_template.pdf
+        run: typst compile --root . templates/R01/R01.typ outputs/R01_template.pdf
 
       - name: Compile R03 template
-        run: typst compile templates/R03/R03.typ outputs/R03_template.pdf
+        run: typst compile --root . templates/R03/R03.typ outputs/R03_template.pdf
 
       - name: Upload compiled PDFs
         uses: actions/upload-artifact@v4
