--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,9 @@
 # Use with: pip install -r requirements.txt
 
 # Core dependencies
-typst-cli>=0.9.0
+typst
 bibtexparser>=1.4.0
-pylatexenc>=3.0.0
+pylatexenc
 scholarly>=1.7.0
 
 # Data analysis and visualization
