Revise CI workflow and streamline documentation
Enhance the GitHub Actions pipeline to include comprehensive build, validation, and release processes.

Consolidate README files to provide a more organized and detailed usage guide.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,5 +29,8 @@
     "statusBarItem.remoteForeground": "#15202b",
     "tab.activeBorder": "#b5e7f8"
   },
-  "peacock.color": "#86d8f4"
+  "peacock.color": "#86d8f4",
+  "files.exclude": {
+    ".history": true
+  }
 }
