--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,7 @@ rsconnect/
 example_files/
 
 bootstrap/bootstrap-54e3e7770afa53bb57f7dd5e90680ac5.min.css
+
+.history/
+/.history/
+# my_grants/neural_basis_of_uncertainty/R01.pdf
