--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,6 +31,7 @@
   },
   "peacock.color": "#86d8f4",
   "files.exclude": {
-    ".history": true
+    ".history": true,
+    "my_grants/neural_basis_of_uncertainty/.history": true
   }
 }
