--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,4 @@ bootstrap/bootstrap-54e3e7770afa53bb57f7dd5e90680ac5.min.css
 .history/
 /.history/
 # my_grants/neural_basis_of_uncertainty/R01.pdf
+templates/shared/budget.pdf
