--- a/.github/workflows/compile-typst.yml
+++ b/.github/workflows/compile-typst.yml
@@ -31,7 +31,8 @@ jobs:
     - name: Install Typst
       uses: typst-community/setup-typst@v4
       with:
-        version: 'latest'
+        typst-version: 'latest'
+        allow-prereleases: true
 
     - name: Set up Python
       uses: actions/setup-python@v4
