--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,14 @@ rsconnect/
 example_files/
 
 bootstrap/bootstrap-54e3e7770afa53bb57f7dd5e90680ac5.min.css
+
+# Python cache
+.venv/
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+*.pyz
+*.egg
+*.egg-info/
+dist/
