Update Typst tooling and remove version constraints
Replace typst-preview extension with tinymist, remove version
constraints from typst dependency, and clean up merge conflicts

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,10 +1,10 @@
 {
   "recommendations": [
     "nvarner.typst-lsp",
-    "mgt19937.typst-preview",
     "mathematic.vscode-pdf",
     "quarto.quarto",
     "REditorSupport.r",
-    "ms-python.python"
+    "ms-python.python",
+    "myriad-dreamin.tinymist"
   ]
 }
