--- a/environment.yml
+++ b/environment.yml
@@ -53,7 +53,7 @@ dependencies:
   - jupyter>=1.0.0
   - pip:
       # Additional Python packages from PyPI
-      - typst>=0.9.0  # Typst compiler
+      - typst   # Typst compiler
       - bibtexparser>=1.4.0
       - pylatexenc
       - scholarly>=1.7.0  # For fetching citation data
